# esp-moonlight

./: .gitignore  .gitlab-ci.yml  README.md
1_hello_world/: sdkconfig
2_drivers/: CMakeLists.txt
2_drivers/main/: app_main.c
4_network_config/: CMakeLists.txt
4_network_config/main/: app_main.c
components/blufi/: CMakeLists.txt  blufi.c  blufi_security.c
components/button/: CMakeLists.txt  component.mk
components/led_rgb/: CMakeLists.txt  led_rgb.c
components/moonlight_board/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
components/moonlight_board/include/: board_moonlight.h
components/moonlight_board/src/: board_esp32_moonlight.c  board_esp32s3_moonlight.c
components/sensor/: CMakeLists.txt  sensor.c
components/sensor/include/: sensor.h
components/speech_recognition/: CMakeLists.txt  component.mk
docs/: conf_common.py
docs/en/: conf.py  drivers.rst  firmwareupgrade.rst  index.rst  introduction.rst  networkconfig.rst  remotecontrol_lan.rst  speech_recognition.rst  wifi.rst
docs/zh_CN/: conf.py  drivers.rst  firmwareupgrade.rst  gettingstarted.rst  index.rst  introduction.rst  networkconfig.rst  remotecontrol_lan.rst  speech_recognition.rst  wifi.rst
docs/zh_CN/rst/: conf.py  (+8 more)
examples/2_drivers/: CMakeLists.txt  Makefile
examples/3_wifi_connection/: CMakeLists.txt  Makefile
examples/4_network_config/: Makefile  sdkconfig.defaults
examples/5_app_control/: CMakeLists.txt  Makefile  sdkconfig.defaults
model_3d/: ESP-Moonlight-bottom_V2.0.stl  ESP_Moonlight_bottom_0420.stl  esp-moonlight-bottom-V2.1.stl
tools/: build_apps.py
(+113 files in other folders)
